--- a/02-TheNightmare/UI/Styles/game-styles.css
+++ b/02-TheNightmare/UI/Styles/game-styles.css
@@ -38,7 +38,10 @@ footer {
     width: 100%;
     height: 100%;
     left: 0;
+    text-align: center;
+    white-space: pre;
     background-color: black;
+    color: white;
 }
 
 #text {
