--- a/02-TheNightmare/UI/Styles/rain-styles.css
+++ b/02-TheNightmare/UI/Styles/rain-styles.css
@@ -14,14 +14,14 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 4;
+    z-index: 2;/*Capa 2 de lluvia, abajo de la decoración de los frames*/
 }
 
 .rain.back-row {
     display: none;
-    z-index: 3;
     bottom: 60px;
     opacity: 0.5;
+    z-index: 1; /*Capa 1 de lluvia (por encima de ascii art)*/
 }
 
 body.back-row-toggle .rain.back-row {
