--- a/02-TheNightmare/UI/Styles/rain-styles.css
+++ b/02-TheNightmare/UI/Styles/rain-styles.css
@@ -14,7 +14,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;/*Capa 2 de lluvia, abajo de la decoración de los frames*/
+    z-index: 2;/*Capa 2 de lluvia, abajo de la decoración de los frames (cartas)*/
 }
 
 .rain.back-row {
